--- a/src/FHBingen/Bundle/MHBBundle/Resources/public/css/style.css
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/public/css/style.css
@@ -1,61 +1,82 @@
-/*#container{*/
-    /*width: auto;*/
-    /*height: auto;*/
-/*}*/
+body {
+    padding-top: 50px;
+    overflow: hidden;
+}
 
-/*#header{*/
-    /*background-color: white;*/
-    /*min-height: 80px;*/
-    /*height: 15%;*/
-/*}*/
+#wrapper {
+    min-height: 100%;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: inline-block;
+}
 
-/*#header_logo{*/
-    /*float: left;*/
-    /*min-width: 180px;*/
-    /*width: 10%;*/
-/*}*/
+#main-wrapper {
+    height: 100%;
+    overflow-y: auto;
+    padding: 50px 0 0 0;
+}
 
-/*#img_logo{*/
-    /*margin: 5px 10px;*/
-/*}*/
+#main {
+    position: relative;
+    height: 100%;
+    overflow-y: auto;
+    padding: 0 15px;
+}
 
-/*#header_title{*/
-    /*margin-left: 180px;*/
-    /*width: 80%;*/
-    /*margin-right: 180px;*/
-/*}*/
+#sidebar-wrapper {
+    height: 100%;
+    padding: 75px 0 0 0;
+    position: fixed;
+    border-right: 1px solid gray;
+}
 
-/*#header_user{*/
-    /*min-width: 180px;*/
-    /*width: 10%;*/
-    /*margin-left: auto;*/
-/*}*/
+#sidebar {
+    position: relative;
+    height: 100%;
+    overflow-y: auto;
+}
 
-/*#main{*/
-    /*background-color: white;*/
-    /*min-height: 300px;*/
-    /*height: 70%;*/
-    /*overflow: hidden;*/
-/*}*/
+#sidebar .list-group-item {
+    border-radius: 0;
+    border-left: 0;
+    border-right: 0;
+    border-top: 0;
+}
 
-/*#sidebar{*/
-    /*background-color: white;*/
-    /*width: 15%;*/
-    /*min-height: 300px;*/
-    /*height: 70%;*/
-    /*float: left;*/
-/*}*/
+@media (max-width: 992px) {
+    body {
+        padding-top: 0;
+    }
+}
 
-/*#functionContent{*/
-    /*background-color: lightgray;*/
-    /*min-height: 300px;*/
-    /*height: 70%;*/
-    /*margin-left: 15%;*/
-/*}*/
+@media (min-width: 992px) {
+    #main-wrapper {
+        float: right;
+    }
+}
 
-/*#footer{*/
-    /*background-color: green;*/
-    /*min-height: 60px;*/
-    /*height: 15%;*/
-/*}*/
+@media (max-width: 992px) {
+    #main-wrapper {
+        padding-top: 0;
+    }
+}
 
+@media (max-width: 992px) {
+    #sidebar-wrapper {
+        position: static;
+        height: auto;
+        max-height: 300px;
+        border-right: 0;
+    }
+}
+
+.textAreaClass {
+    width: 600px;
+    height: 120px;
+    border: 3px solid #cccccc;
+    padding: 5px;
+    font-family: Tahoma, sans-serif;
+}
