Erster Entwurf für textarea-Felder

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/layout.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/layout.html.twig
@@ -7,9 +7,9 @@
     <title>MHB-VS</title>
 
     <!-- Bootstrap -->
-    <link href="{{ asset('bundles/fhbingenmhb/css/bootstrap.css') }}" rel="stylesheet" />
+    <link href="{{ asset('bundles/fhbingenmhb/css/bootstrap.css') }}" rel="stylesheet"/>
     <!-- own Styles -->
-    <link href="{{ asset('bundles/fhbingenmhb/css/style.css') }}" rel="stylesheet" />
+    <link href="{{ asset('bundles/fhbingenmhb/css/style.css') }}" rel="stylesheet"/>
 
     {#
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -26,10 +26,8 @@
     {#<script type="text/javascript" src="{{ asset('bundles/fhbingenmhb/js/bootstrap.js') }}"></script>#}
     <script type="text/javascript" src="{{ asset('bundles/fhbingenmhb/js/jquery.tablesorter.min.js') }}"></script>
 </head>
-
-<body style="margin-top:75px">
-
-<div id="header" class="navbar navbar-default navbar-fixed-top navbar-brand" style="min-height:75px">
+<body>
+<div id="header" class="navbar navbar-default navbar-fixed-top navbar-brand">
     <div class="navbar-header">
         <img src="{{ asset('bundles/fhbingenmhb/images/logo.png') }}" alt="logo"/>
         <span>Modulhandbuch-Verwaltungssystem</span>
@@ -75,6 +73,5 @@
         </div>
     </div>
 </div>
-
 </body>
 </html>
