--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/modulCodeUebersicht.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/modulCodeUebersicht.html.twig
@@ -13,6 +13,7 @@
             <thead>
                 <tr>
                     <th>Modultitel</th>
+                    <th style="min-width: 130px; width: 12%">Modulcode</th>
                     <th style="min-width: 130px; width: 12%">Erstelldatum</th>
                 </tr>
             </thead>
@@ -20,6 +21,7 @@
             {% for dummy in dummyAngebote %}
                 <tr>
                     <td><a href="{{ path('modulCodeErstellung', {'id': dummy.getVeranstaltung().getModulID()}) }}">{{ dummy.getVeranstaltung() }}</a></td>
+                    <td>{{ dummy.getCode() }}</td>
                     {# bei Date wird immer |date('Y-m-d') benötigt um als String zu casten #}
                     <td>{{dummy.getVeranstaltung().getErstellungsdatum()|date('d.m.Y')}}</td>
                 </tr>
@@ -32,6 +34,7 @@
             <thead>
                 <tr>
                     <th>Modultitel</th>
+                    <th style="min-width: 130px; width: 12%">Modulcode</th>
                     <th style="min-width: 130px; width: 12%">Erstelldatum</th>
                 </tr>
             </thead>
@@ -39,6 +42,7 @@
             {% for normal in angebote %}
                 <tr>
                     <td><a href="{{ path('modulCodeErstellung', {'id': normal.getVeranstaltung().getModulID()}) }}">{{ normal.getVeranstaltung() }}</a></td>
+                    <td>{{ normal.getCode() }}</td>
                     {# bei Date wird immer |date('Y-m-d') benötigt um als String zu casten #}
                     <td>{{ normal.getVeranstaltung().getErstellungsdatum()|date('d.m.Y') }}</td>
                 </tr>
