--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/PDF-Test/modulhandbuch.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/PDF-Test/modulhandbuch.html.twig
@@ -159,7 +159,7 @@
                         <td>7</td>
                         <td colspan="6">
                             <div class="key">Voraussetzungen für die Vergabe von Leistungspunkten</div>
-                            {% if voraussetzung[count] is not empty %}
+                            {% if vorlp[count] is not empty %}
                                 {% for name in vorlp[count] %}
                                     {{ name }}<br/>
                                 {% endfor %}
