--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/eigeneModule.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/eigeneModule.html.twig
@@ -66,4 +66,15 @@
             </tbody>
         </table>
     </div>
+
+    {% for type, messages in app.session.flashBag.all %}
+        {% for message in messages %}
+            {% if type == 'info' %}
+                <script type="text/javascript">
+                    alert('{{ message|raw }}');
+                </script>
+            {% endif %}
+        {% endfor %}
+    {% endfor %}
+
 {% endblock %}
