--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/PDF-Test/modulhandbuch.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/PDF-Test/modulhandbuch.html.twig
@@ -1,3 +1,4 @@
+{# OBSOLET #}
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html
         PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
@@ -220,7 +221,6 @@
         {% endfor %}
     {% endmacro %}
     <title>Modulhandbuch</title>
-    <link rel="stylesheet" type="text/css" href="{{ asset('bundles/fhbingenmhb/css/modul.css') }}"/>
 </head>
 <body>
 {#TODO: array mit modulen übergeben mit foreach durchlaufen #}
