--- a/web/bundles/fhbingenmhb/css/style.css
+++ b/web/bundles/fhbingenmhb/css/style.css
@@ -88,3 +88,25 @@ body {
 .modulNameClass {
     width: 475px;
 }
+
+.modul {
+
+}
+
+.modul table {
+    border-collapse: collapse;
+}
+
+.modul table th, .modul table td {
+    border: 1px solid gray;
+    padding: 0 10px;
+}
+
+.modul div.key {
+    /* Als Basis h4 nach http://www.w3.org/TR/CSS2/sample.html */
+    display: block;
+    unicode-bidi: embed;
+    margin: 0.25em 0;
+    font-weight: bolder;
+    page-break-after: avoid;
+}
