--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/planungErstellen.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/planungErstellen.html.twig
@@ -12,7 +12,7 @@
 {% block content %}
     <h3>Modulplanung</h3>
     <div class="table-responsive">
-        {{ form_start(form, {attr: {novalidate: 'novalidate'}}) }}
+        {{ form_start(form) }}
         <table class="table table-bordered">
             {{ form_errors(form) }}
             {{ form_row(form.name) }}
