--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/MHB/mhbErstellung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/MHB/mhbErstellung.html.twig
@@ -1,5 +1,7 @@
 {% extends 'FHBingenMHBBundle::layout.html.twig' %}
 
+{# TODO: Name "mhbErstellung" falsch #}
+
 {% block content %}
     {#
     <script type="text/javascript">
