Angebote jetzt möglich (jsonencode)

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/modulBearbeiten.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/modulBearbeiten.html.twig
@@ -29,7 +29,7 @@
 
 {% block content %}
     <div class="table-responsive">
-        {{ form_start(form, {attr: {novalidate: 'novalidate'}}) }}
+        {{ form_start(form) }}
         <table class="table table-bordered">
             {{ form_errors(form) }}
             {{ form_row(form.name) }}
