--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/modulBearbeiten.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/modulBearbeiten.html.twig
@@ -75,11 +75,14 @@
 
     </script>
 
-    <h4 style="font-weight: bold">Studiengang einpflegen</h4>
+    <h4 style="font-weight: bold">Modulbearbeitung</h4>
     <div class="table-responsive">
-        {{ form_start(form, {attr: {novalidate: 'novalidate'}}) }}
+        {{ form_start(form) }}
         <table class="table table-bordered">
             {{ form_errors(form) }}
+            <tr>
+                <td colspan="3" style="color:red"> Mit [#] gekennzeichnete Felder sind Pflichtfelder</td>
+            </tr>
             {{ form_row(form.name) }}
             {{ form_row(form.nameEN) }}
             {{ form_row(form.kuerzel) }}
