--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/planungErstellen.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/planungErstellen.html.twig
@@ -32,6 +32,9 @@
         {{ form_start(form) }}
         <table class="table table-bordered">
             {{ form_errors(form) }}
+            <tr>
+                <td colspan="3" style="color:red"> Mit [#] gekennzeichnete Felder sind Pflichtfelder</td>
+            </tr>
             {{ form_row(form.name) }}
             {{ form_row(form.nameEN) }}
             {{ form_row(form.kuerzel) }}
