--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbModulListe.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbModulListe.html.twig
@@ -13,7 +13,7 @@
                 <tr>
                     <th>Modul</th>
                     <th>Kürzel</th>
-                    <th>Regelsemester</th>
+                    <th>Code</th>
                     <th>Version</th>
                     <th>Modulverantwortlicher</th>
                 </tr>
