--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/modulCodeUebersicht.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/modulCodeUebersicht.html.twig
@@ -8,7 +8,7 @@
         });
     </script>
     <div class="table-responsive">
-        <h3>Module mit DUMMY Modulcode</h3>
+        <h3>Module ohne Modulcode aus {{ studiengang.__toString() }}</h3>
         <table id="table-without-code" class="table table-bordered tablesorter">
             <thead>
                 <tr>
