--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/planungErstellen.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/planungErstellen.html.twig
@@ -48,6 +48,7 @@
             {{ form_row(form.lernergebnisse) }}
             {{ form_row(form.inhalte) }}
             {{ form_row(form.sprache) }}
+            {{ form_row(form.SpracheSonstiges) }}
             {{ form_row(form.literatur) }}
             {{ form_row(form.voraussetzungInh) }}
             {{ form_row(form.lehrveranstaltungen) }}
