- Modulcode: DUMMY umbenennen -> Module ohne Modulcode - Modulhandbuch Übersicht Regelsemester zu Code unbenennen - Studiengangverwaltung: Studiengang-Kontext fehlt - Modulcode: Studiengang-Kontext fehlt - Erstelldatum + Autor (Trigger)

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/alleModule.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/alleModule.html.twig
@@ -15,6 +15,7 @@
             <th style="min-width: 130px; width: 12%">Erstelldatum</th>
             <th style="min-width: 150px; width: 15%">Häufigkeit</th>
             <th style="min-width: 220px; width: 23%">Modulverantwortlicher</th>
+            <th style="min-width: 8px; width: 23%">Autor</th>
             <th style="min-width: 220px; width: 23%">Studiengang</th>
         </tr>
         </thead>
@@ -27,6 +28,7 @@
                 <td>{{ veranstaltung.erstellungsdatum|date('d.m.Y') }}</td>
                 <td>{{ veranstaltung.haeufigkeit }}</td>
                 <td>{{ veranstaltung.beauftragter }}</td>
+                <td>{{ veranstaltung.Autor }}</td>
                 <td>
                     {# TODO: Studiengänge alphabetisch sortieren #}
                     {% for name in stgZuModul[count] %}
