--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbModulListe.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbModulListe.html.twig
@@ -7,7 +7,7 @@
         });
     </script>
     <div class="table-responsive">
-        {# <h3>Modulhandbücher</h3> #}
+         <h3>{{ beschreibung[0]['Beschreibung'] }}</h3>
         <table id="table" class="table table-bordered tablesorter">
             <thead>
                 <tr>
