--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/layout.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/layout.html.twig
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    {#<meta http-equiv="X-UA-Compatible" content="IE=edge">#}
+    {#<meta name="viewport" content="width=device-width, initial-scale=1">#}
     <title>MHB-VS</title>
 
     <!-- Bootstrap -->
@@ -20,10 +20,8 @@
     <![endif]-->
     #}
 
-    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
-    {#<script type='text/javascript' src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>#}
+    <script type="text/javascript" src="{{ asset('bundles/fhbingenmhb/js/jquery-2.1.3.min.js') }}"></script>
     <script type="text/javascript" src="{{ asset('bundles/fhbingenmhb/js/bootstrap.min.js') }}"></script>
-    {#<script type="text/javascript" src="{{ asset('bundles/fhbingenmhb/js/bootstrap.js') }}"></script>#}
     <script type="text/javascript" src="{{ asset('bundles/fhbingenmhb/js/jquery.tablesorter.min.js') }}"></script>
 </head>
 <body>
