--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/layout.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/layout.html.twig
@@ -8,6 +8,8 @@
 
     <!-- Bootstrap -->
     <link href="{{ asset('bundles/fhbingenmhb/css/bootstrap.css') }}" rel="stylesheet"/>
+    <link href="{{ asset('bundles/fhbingenmhb/css/bootstrap-theme.css') }}" rel="stylesheet"/>
+
     <!-- own Styles -->
     <link href="{{ asset('bundles/fhbingenmhb/css/style.css') }}" rel="stylesheet"/>
 
