--- a/src/FHBingen/Bundle/MHBBundle/Resources/public/css/tablesorter.css
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/public/css/tablesorter.css
@@ -1,8 +1,7 @@
-/* tables */
 table.tablesorter {
-	font-family:arial;
+	/*font-family:arial;*/
 	background-color: #CDCDCD;
-	margin:10px 0pt 15px;
+	margin:10px 0 15px;
 	font-size: 8pt;
 	width: 100%;
 	text-align: left;
@@ -14,9 +13,7 @@ table.tablesorter thead tr th, table.tablesorter tfoot tr th {
 	padding: 4px;
 }
 table.tablesorter thead tr .header {
-	background-image: url(bg.gif);
-	background-repeat: no-repeat;
-	background-position: center right;
+	background: url(../images/bg.gif) no-repeat center right;
 	cursor: pointer;
 }
 table.tablesorter tbody td {
@@ -29,11 +26,11 @@ table.tablesorter tbody tr.odd td {
 	background-color:#F0F0F6;
 }
 table.tablesorter thead tr .headerSortUp {
-	background-image: url(asc.gif);
+	background-image: url(../images/asc.gif);
 }
 table.tablesorter thead tr .headerSortDown {
-	background-image: url(desc.gif);
+	background-image: url(../images/desc.gif);
 }
 table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSortUp {
-background-color: #8dbdd8;
+	background-color: #8dbdd8;
 }
