--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/layout.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/layout.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="utf-8">
     {#<meta http-equiv="X-UA-Compatible" content="IE=edge">#}
@@ -8,7 +8,7 @@
 
     <!-- Bootstrap -->
     <link href="{{ asset('bundles/fhbingenmhb/css/bootstrap.css') }}" rel="stylesheet"/>
-    <link href="{{ asset('bundles/fhbingenmhb/css/bootstrap-theme.css') }}" rel="stylesheet"/>
+    {#<link href="{{ asset('bundles/fhbingenmhb/css/bootstrap-theme.css') }}" rel="stylesheet"/>#}
     <!-- Tablesorter -->
     <link href="{{ asset('bundles/fhbingenmhb/css/tablesorter.css') }}" rel="stylesheet"/>
     <!-- own Styles -->
@@ -23,8 +23,11 @@
     <![endif]-->
     #}
 
+    <!-- jQuery -->
     <script type="text/javascript" src="{{ asset('bundles/fhbingenmhb/js/jquery-2.1.3.min.js') }}"></script>
+    <!-- Bootstrap -->
     <script type="text/javascript" src="{{ asset('bundles/fhbingenmhb/js/bootstrap.min.js') }}"></script>
+    <!-- Tablesorter -->
     <script type="text/javascript" src="{{ asset('bundles/fhbingenmhb/js/jquery.tablesorter.min.js') }}"></script>
 </head>
 <body>
