--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/sglNav.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/sglNav.html.twig
@@ -21,7 +21,7 @@
         </li>
 
         <li role="presentation">
-            <a href="#{# {{ path('modulDeaktivierung') }} #}">Moduldeaktivierung</a>
+            <a href="#{# {{ path('modulDeaktivierung') }} #}" onclick="return highlightMe(this)">Moduldeaktivierung</a>
         </li>
     {% endif %}
 {% endif %}
